--- a/resourcepack/assets/minecraft/models/item/knowledge_book.json
+++ b/resourcepack/assets/minecraft/models/item/knowledge_book.json
@@ -1,7 +1,7 @@
 {
   "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "minecraft:item/knowledge_book"
+    "layer0": "minecraft:item/gunpowder"
   },
   "overrides":
   [
